--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,82 @@
-streamlit
-pandas
-numpy
-scikit-learn
-xgboost
+absl-py==2.2.2
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
+asgiref==3.8.1
+asttokens==2.4.1
+astunparse==1.6.3
+attrs==25.1.0
+bcrypt==4.2.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+colorama==0.4.6
+comm==0.2.2
+debugpy==1.8.8
+decorator==5.1.1
+Django==5.1.6
+executing==2.1.0
+frozenlist==1.5.0
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.51.1
+h5py==3.11.0
+idna==3.10
+ipykernel==6.29.5
+ipython==8.29.0
+jedi==0.19.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+keras==2.14.0
+Markdown==3.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml_dtypes==0.2.0
+multidict==6.1.0
+namex==0.0.9
+nest-asyncio==1.6.0
+numpy==1.26.4
+opt_einsum==3.3.0
+optree==0.15.0
+packaging==24.2
+parso==0.8.4
+pdfcrowd==6.4.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
+propcache==0.2.1
+protobuf==4.25.3
+psutil==6.1.0
+pure_eval==0.2.3
+Pygments==2.18.0
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+pyzmq==26.2.0
+requests==2.32.3
+rich==14.0.0
+scipy==1.10.1
+setuptools==80.8.0
+six==1.16.0
+sqlparse==0.5.3
+stack-data==0.6.3
+tensorboard==2.14.1
+tensorboard-data-server==0.7.2
+tensorflow==2.14.1
+termcolor==3.1.0
+tornado==6.4.1
+traitlets==5.14.3
+twilio==9.4.5
+typing_extensions==4.13.2
+tzdata==2025.1
+urllib3==2.3.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.14.1
+yarl==1.18.3
 joblib
-imbalanced-learn
-matplotlib
-seaborn
-scipy
+lifelines==0.27.8
+scikit-learn==1.4.1.post1
+xgboost
+
